--- a/DiscoverWebService/DiscoverWebService/DiscoverWebService.csproj
+++ b/DiscoverWebService/DiscoverWebService/DiscoverWebService.csproj
@@ -49,6 +49,7 @@
       <HintPath>..\..\..\..\..\SDK\Bin\Microsoft.Xrm.Sdk.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
